# l4-loadbalancer

./: .gitignore  CMakeLists.txt  INTEGRATION.md  README.md  vcpkg.json
dashboard/: package-lock.json
dashboard/src/: App.tsx
dashboard/src/components/: LoadBalancerSimulator.tsx
src/: main.cpp
src/backend/: backend_pool.cpp  backend_pool.hpp  health_check.hpp
src/balancer/: round_robin.cpp  round_robin.hpp
src/config/: config.cpp  config.hpp
src/core/: connection.cpp  connection.hpp  listener.cpp  listener.hpp
src/metrics/: collector.hpp  ws_server.cpp  ws_server.hpp
